--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Supernova"
 include ':app'
+include ':recyclerview-fastscroller-with-value-label'
