--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,18 +46,18 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0-alpha02'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.0"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    implementation files('C:/Users/Adam Hawke/Documents/recyclerviewfastscroller-release.aar')
+    implementation files('libs/recyclerviewfastscroller-release.aar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-    def lifecycle_version = "2.5.1"
+    def lifecycle_version = "2.6.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
