--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-*.iml
-.gradle
-/local.properties
-.DS_Store
+/.gradle
+/gradle
 /build
 /captures
-.externalNativeBuild
-.cxx
+/.idea
 local.properties
-/.idea/
